# docker-diet

./: .gitignore  LICENSE  README.md  pyproject.toml
docker_diet/: __init__.py  analyzer.py  app.py  cleaner.py  cli.py  reporter.py  scanner.py
