[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-diet"
version = "0.1.0"
description = "Interactive TUI to visualize Docker disk usage and safely clean up resources"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "docker-diet contributors"}]
keywords = ["docker", "cleanup", "disk-usage", "tui", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.40.0",
]

[project.scripts]
docker-diet = "docker_diet.cli:cli"

[project.urls]
Homepage = "https://github.com/docker-diet/docker-diet"
Repository = "https://github.com/docker-diet/docker-diet"

[tool.setuptools.packages.find]
include = ["docker_diet*"]
